--- a/index.html
+++ b/index.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juventude Católica</title>
-    <link rel="stylesheet" href="/design.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
-<body>
-    <header>
-        <figure>
-            <img src="/imagens/LOGO.png" alt="logo">
-        </figure>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="/Sobre.html">Sobre</a></li>
-                <li><a href="/Eventos.html">Eventos</a></li>
-                <li><a href="/Contato.html">Contato</a></li>
-            </ul>
-        </nav>
+<body style="background-color: black;" >
+    <header style="display: flex; background-color: white;padding: 0 10px 0 10px;">
+        <ul style="list-style: none; display: flex; gap: 10px; margin-left: auto;align-content: cente; padding: 0;">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="servicos.html">Serviços</a></li>
+        </ul>
     </header>
-    <main>
-        <section id="home">
-            <figure>
-                <img src="/imagens/LOGO.png" alt="logo">
-            </figure>
-            </div>
-        </section>
-    </main>
 </body>
 </html>
