--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grupo Restauração</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body style="background-color: black;" >
-    <header style="display: flex; background-color: white;padding: 0 10px 0 10px;">
-        <ul style="list-style: none; display: flex; gap: 10px; margin-left: auto;align-content: cente; padding: 0;">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="servicos.html">Serviços</a></li>
-        </ul>
+<body>
+    <header>
+        <div class="container">
+            <div class="item"></div>
+                <a href="#">Inicio</a>
+            <div class="item"></div>
+                <a href="#">Agenda</a>
+            <div class="item"></div>
+                <a href="#">Sobre nós</a>
+            <div class="item"></div>
+                <a href="#">Inicio</a>
+            <div class="item"></div>
+                <a href="#">Contato</a>
+        </div>
+        <hr>
     </header>
 </body>
 </html>
