--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="container">
+            <p>GOJ Restauração</p>
             <div class="item"></div>
                 <a href="#">Inicio</a>
             <div class="item"></div>
