--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <div class="container">
-            <p>GOJ Restauração</p>
             <div class="item"></div>
                 <a href="#">Inicio</a>
             <div class="item"></div>
@@ -24,6 +23,16 @@
                 <a href="#">Contato</a>
         </div>
         <hr>
+        <footer>
+            <div class="faleconosco">
+                <p>Fale Conosco</p>
+            </div>
+            <div class="logo-footer">
+                <p>imagem aqui</p>
+            </div>
+            <div class="redes-sociais">
+                <a href=""></a>
+        </footer>
     </header>
 </body>
 </html>
